# example-bazel-nestjs-local-package-dependency

./: README.md  WORKSPACE
server/api/: BUILD.bazel  package.json  tsconfig.json
server/api/src/: BUILD.bazel  main.ts
shared/: BUILD.bazel  index.ts  package.json  tsconfig.json
